# rover-Core

./: .gitignore  .gitmodules  README.md  platformio.ini
ESP_embedded_main/: platformio.ini
ESP_embedded_main/src/: main.cpp
ESP_embedded_motors/: platformio.ini
ESP_embedded_motors/include/: AstraWheelBase.h
ESP_embedded_motors/src/: AstraWheelBase.cpp  main.cpp
ESP_embeded_main/: platformio.ini
ESP_embeded_main/src/: main.cpp
core_main/: platformio.ini
core_main/include/: CoreMainMCU.h
core_main/src/: main.cpp
core_motor/: platformio.ini
core_motor/include/: CoreMotorMCU.h
core_motor/src/: AstraWheelBase.cpp  main.cpp
core_ws/src/core_pkg/: package.xml  setup.cfg  setup.py
core_ws/src/core_pkg/core_pkg/: core_control_node.py
core_ws/src/headless_pkg/: package.xml  setup.cfg  setup.py
core_ws/src/headless_pkg/headless_pkg/: headless_ctrl_node.py
core_ws/src/health_pkg/: CMakeLists.txt  package.xml  readme.md
core_ws/src/health_pkg/launch/: core_with_health.yaml
core_ws/src/health_pkg/src/: rover_client_node.cpp
core_ws/src/interfaces_pkg/: CMakeLists.txt  package.xml
core_ws/src/interfaces_pkg/msg/: ControllerState.msg  CoreFeedback.msg
core_ws/src/mac_headless_pkg/: package.xml  setup.cfg  setup.py
core_ws/src/mac_headless_pkg/mac_headless_pkg/: mac_headless_ctrl_node.py
embedded_main/: platformio.ini
embedded_main/src/: AstraCAN.h  AstraMotors.cpp  AstraMotors.h  AstraSensors.h  AstraSubroutines.h  Main.cpp  Main2.txt  MainExtra.txt  Motor_Testing.code-workspace
src/: Main.cpp  main.cpp
test_bs_ws/src/bs_pkg/: package.xml  setup.cfg  setup.py
test_bs_ws/src/bs_pkg/bs_pkg/: test_bs_node.py
